feat: included push notifications and removed websocket integration
